Fixed CDrive animation on mobile

--- a/src/app/cdrive/cdrive.component.scss
+++ b/src/app/cdrive/cdrive.component.scss
@@ -26,7 +26,8 @@ $very-light-blue: hsl(209, 54.76%, 60%);
       }
 
       img {
-        margin-top: 3rem;
+        padding-bottom: 0;
+        margin-top: 5rem;
         width: 100%;
         border: 0.15rem solid grey;
         border-radius: 0.5rem;
